--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,11 +4,18 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+	line-height: 1.6;
+	font-size: 18px;
 }
 
 a {
   color: inherit;
   text-decoration: none;
+}
+
+img {
+	max-width: 100%;
+	display: block;
 }
 
 * {
