--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,6 +12,12 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+	border-bottom: 5px solid transparent;
+	transition: 0.3s;
+}
+
+a:hover {
+	border-bottom: 5px solid white;
 }
 
 img {
