--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -1,7 +1,9 @@
 .container {
 	max-width: 36rem;
-	padding: 0 1rem;
+	padding: 15px 30px;
 	margin: 3rem auto 6rem;
+	background-color: rgb(249, 246, 245);
+	min-height: 80vh;
 }
 
 .header {
